
2009-04-07	Denis M. Gabaidulin

	* main/Base/BaseRange.class.php: common numeric range logic extracted.

	* main/Base/FloatRange.class.php: float range implemention.

	* main/Charts/Google. Chart line styles implemented.

	* main/Charts/Google/GoogleGridedLineChart.class.php added.

2009-04-06	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: alignByBase() added.

2009-04-05	Sergey S. Sergeev

	* main/Utils/Routers, test/main/Utils/Routers: utils for rewriting 
	urls moved from incubator.

2009-04-04	Denis M. Gabaidulin

	* main/Charts/Google. Google charts implementation(partically)
	moved from incubator.

2009-04-03	Ivan Y. Khvostishkov

	* merged directory services and messaging api from master.

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php:
	reference-enabled directory storage with symbolic links (even
	recursive). See test/main/EntityProtoConvertersTest.class.php for
	example of usage.

	* main/Messages/: simple messaging API is starting here. Inspired by
	Java Message Service.

2009-03-28	Evgeniy N. Sokolov

	* core/Form/Form.class.php: getWrongLabel() and getMissingLabel()
	added.

2009-03-27	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php: simple
	directory service helpers based on a local filesystem. Can be used for
	easy object configuration management, just like an LDAP.

2009-03-27	Sergey S. Sergeev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php: drop limit and
	offset in count query fixed.

2009-03-26	Denis M. Gabaidulin

	* core/DB/MySql dialects classes: quote integers values too.	

2009-03-26	Vladlen Y. Koshelev

	* core/Base/Singleton.class.php: instantiation of classes with two or more
	constructor arguments fixed, related tests added.

2009-03-25	Vladlen Y. Koshelev

	* main/Application/ApplicationUrl.class.php: cleanHref() added for building