@@ -1,4 +1,8 @@
 
+2009-04-08	Denis M. Gabaidulin
+
+	* main/Charts/Google/GoogleChartTitle.class.php added.
+
 2009-04-07	Denis M. Gabaidulin
 
 	* main/Base/BaseRange.class.php: common numeric range logic extracted.
